--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,8 @@
         }
     },
     "require": {
-        "symfony/console": "~5.0",
-        "symfony/process": "~5.0",
+        "symfony/console": "5.0.1",
+        "symfony/process": "5.0.1",
         "guzzlehttp/guzzle": "~6.0"
     },
     "bin": [
